# oop

./: CMakeLists.txt
lab1/: CMakeLists.txt
lab1/1_3/: CMakeLists.txt
lab1/1_3/src/: findtext.cpp  findtext.h  main.cpp
lab1/1_3/tests/: check-substring.cpp  evgeniy-onegin.txt  find-string.cpp  out.txt  test1.txt  test_case.txt  test_small.txt  tests.bat  yevgeniy-onegin.txt
lab1/2_6/: CMakeLists.txt  main.cpp  tests.bat
lab1/3_2/: CMakeLists.txt  main.cpp  tests.bat
lab1/4_1/: CMakeLists.txt  main.cpp  tests.bat
lab1/4_1/generate/: FileGen.cpp  FileGen.h
lab1/4_1_plus/: CMakeLists.txt  main.cpp
lab1/5_3/: CMakeLists.txt  main.cpp  tests.bat
oop-master/: youtube.html
oop-master/coding-conventions/: CppCodingConventions.sln
oop-master/coding-conventions/CppCodingConventions/: CppCodingConventions.cpp  CppCodingConventions.vcxproj  CppCodingConventions.vcxproj.filters  MyClassName.cpp  MyClassName.h  ReadMe.txt  stdafx.cpp
oop-master/exam/: README.md
oop-master/labs/checklist/: README.md
oop-master/labs/lab2/: lab2.sln
oop-master/labs/lab3/: lab3.sln
oop-master/labs/lab6/: lab6.sln
oop-master/labs/lab7/: lab7.sln
oop-master/lectures/: README.md
oop-master/lectures/01/: README.md  Синтаксис C++.pptx
oop-master/samples/01-basics/: cpp-samples.sln  sandbox.cpp
oop-master/samples/02-stl-tdd/: 02-stl-tdd.sln
oop-master/samples/03-classes/: 03.sln
oop-master/samples/04-inheritance/: 04.sln
oop-master/samples/operator_overloading/: operator_overloading.sln
oop-master/samples/templates/: templates.sln
oop-master/tasks/: README.md
(+309 files in other folders)
